--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "immutable": "^4.0.0-rc.12",
     "otsu": "^0.0.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rippleware": "^0.0.12",
     "stats-lite": "^2.2.0",
     "type-check": "^0.3.2"
