--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "@tensorflow/tfjs": "^1.5.2",
-    "@tensorflow/tfjs-node": "^1.5.1",
+    "@tensorflow/tfjs": "1.5.2",
+    "@tensorflow/tfjs-node": "1.5.2",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
