--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "babel src --out-dir dist && uglifyjs dist/*.js -o dist/*.js",
+    "build": "rm -rf dist ; cp -rf src dist ; babel dist --out-dir dist ; uglifyjs dist/*.js -o dist/*.js",
     "prettify": "yarn prettier --write \"**/*.js\"",
     "test": "jest"
   },
