--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "rippleware": "^0.1.0-alpha.2",
     "stats-lite": "^2.2.0",
+    "tfjs-clone": "^0.0.1",
     "type-check": "^0.3.2"
   }
 }
