--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "yarn ; rm -rf dist ; cp -rf src dist ; babel dist --out-dir dist ; rm -rf node_modules",
     "prettify": "yarn prettier --write \"**/*.js\"",
-    "test": "jest"
+    "test": "yarn ; jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
