--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@tensorflow/tfjs": "1.5.2",
     "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
+    "is-url": "^1.2.4",
     "nanoid": "^2.1.11",
     "otsu": "^0.0.5",
+    "parse-url": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rippleware": "^0.2.0-alpha.41",
